2006-01-18  Federico Mena Quintero  <federico@ximian.com>

	* src/nautilus-share.c (NETWORK_SHARE_PREFIX): Ahem, I missed one
	slash in "network:///".

2006-01-18  Federico Mena Quintero  <federico@ximian.com>

	* src/nautilus-share.c (file_get_share_status_file): Match the
	file's URI against the "network://share-" prefix from gnome-vfs's
	network method, and get the info for the corresponding share name.
	(get_share_status_share_name): New helper function.
	(get_share_status_and_free_share_info): New helper function.
	(file_get_share_status): Use get_share_status_and_free_share_info().

2006-01-17  Federico Mena Quintero  <federico@ximian.com>

	* src/shares.c (refresh_shares): To list the info for all the
	shares we need "net usershare info", not "net usershare list".
	The latter only lists the share names.

	* debug-net-usershare (command): Likewise; use "info" instead of
	"list" to print the full info for all the shares.

2006-01-16  Federico Mena Quintero  <federico@ximian.com>

	* src/shares.c (net_usershare_run): Use different printf
	formats depending on whether we got an empty error string from
	"net usershare".

	* src/shares.c (DEBUG_SHARES): #undef this; the code seems to work.

	* src/shares.c (net_usershare_run): Let the ret_key_file be NULL.
	In that case, this won't attempt to parse the stdout of "net usershare".
	(add_share): Don't expect a key file from net_usershare_run().
	(modify_share): Implement in terms of remove_share() and add_share().
	(remove_share): Implement in terms of "net usershare delete".

2006-01-13  Federico Mena Quintero  <federico@ximian.com>

	* src/shares.c (net_usershare_run): Don't use G_SPAWN_FILE_AND_ARGV_ZERO.
	(refresh_shares): g_message() if net_usershare_run() fails.
	(add_share): Implement the call to net_usershare_run().
	(add_share_info_to_hashes): New helper function.
	(remove_share_info_from_hashes): New helper function.

2006-01-12  Federico Mena Quintero  <federico@ximian.com>
